--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
 amqp==2.2.2
 anyjson==0.3.3
-#-e git+https://github.com/celery/billiard.git@7dcbf6125ba60d103571228aec2aa7acb5ce193c#egg=billiard
+billiard==3.5.0.5
 celery==4.1.0
+certifi==2020.4.5.1
+chardet==3.0.4
 Django==1.11.15
-django-celery
+django-celery==3.2.2
 django-celery-beat==1.1.0
 ephem==3.7.6.0
+idna==2.9
 -e git+https://github.com/celery/kombu.git@9f2fd403ef9efe8d41265baf0d7218cb6d1f3118#egg=kombu
 pytz==2017.3
+requests==2.23.0
+urllib3==1.25.9
 vine==1.1.4
