--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@
 
     web:
       build: .
-      command: python manage.py runserver 0.0.0.0:8000
+      command: uwsgi --show-config
       volumes:
         - .:/sunrise
       ports:
