Configures docker to allow a second site on this host using nginx

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,18 @@
   version: '2'
     
   services:
+
+    nginx:
+      image: nginx:latest
+      container_name: production_nginx
+      volumes:
+        - ./nginx.conf:/etc/nginx/nginx.conf
+        - ./nginx/error.log:/etc/nginx/error_log.log
+        - ./nginx/cache/:/etc/nginx/cache
+        - /etc/letsencrypt/:/etc/letsencrypt/
+      ports:
+        - 8000:8000
+        - 443:443
     db:
       image: postgres
       environment:
@@ -17,14 +29,15 @@
       devices:
         - "/dev/snd:/dev/snd"
 
-    web:
+    sunrise:
       build: .
       command: uwsgi --show-config
       volumes:
         - .:/sunrise
-      ports:
-        - "8000:8000"
+      expose:
+        - "80"
       depends_on:
+        - nginx
         - db
         - rabbitmq
         - mopidy
@@ -53,3 +66,10 @@
       depends_on:
         - db
         - rabbitmq
+    kira:
+      build: ./kira
+      command: /usr/bin/python3 -m http.server 80
+      expose:
+        - "80"
+      depends_on:
+        - nginx
